# cisco-fmc-mcp

./: .coverage  README.md  fmc-mcp-spec.md  pyproject.toml
src/fmc_mcp/: __init__.py  __main__.py  client.py  config.py  resources.py  server.py  tools.py
tests/: conftest.py  test_client.py  test_live.py  test_resources.py
